Fix pipeline and split into e2e, unit, and lint (#132)
* Fix pipeline and split into e2e, unit, and lint

* Run `yarn format`

--- a/dev-relay/Dockerfile
+++ b/dev-relay/Dockerfile
@@ -43,6 +43,8 @@ RUN apt-get update && apt-get install -y \
     liblmdb0 \
     libflatbuffers1 \
     libzstd1 \
+    bash \
+    coreutils \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
