--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: E2E Tests
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  e2e:
     runs-on: ubuntu-latest
 
     steps:
@@ -59,11 +59,8 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install chromium
 
-      - name: Run tests
-        run: yarn test:ci
-
-      - name: Build
-        run: yarn build
+      - name: Run E2E tests
+        run: yarn test:ci:e2e
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
