--- a/dev-relay/strfry.conf
+++ b/dev-relay/strfry.conf
@@ -2,7 +2,7 @@ db = "./strfry-db/"
 
 dbParams {
     maxreaders = 256
-    mapsize = 10737418240  # 10GB for dev environment
+    mapsize = 1073741824  # 1GB
     noReadAhead = false
 }
 
@@ -16,7 +16,7 @@ events {
 relay {
     bind = "0.0.0.0"
     port = 7777
-    nofiles = 1000000
+    nofiles = 10000
     realIpHeader = ""
 
     info {
