--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "dev:chat": "vite --config vite.config.chat.ts",
     "dev:local": "VITE_USE_LOCAL_RELAY=true vite",
     "dev:test": "VITE_USE_TEST_RELAY=true vite",
     "dev:relay": "cd dev-relay && docker compose up -d && bash quick-seed.sh 80000",
     "start": "vite",
     "prebuild": "tsx ./scripts/updateSocialGraph.ts || true",
     "build": "tsc && vite build --mode production",
+    "build:chat": "tsc && vite build --config vite.config.chat.ts --mode production",
     "build:dev": "tsx ./scripts/updateSocialGraph.ts; tsc && vite build --mode development",
     "build:analyze": "tsc && vite build --mode production && echo '\n📦 Bundle Analysis:' && cat build/stats-list.txt",
     "knip": "knip",
