--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "knip": "knip",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --fix",
     "preview": "vite preview",
-    "pretest": "npx playwright install --with-deps chromium",
+    "pretest": "playwright install --with-deps chromium",
     "test": "vitest run && VITE_USE_TEST_RELAY=true playwright test --reporter=list",
     "test:unit": "vitest run",
     "test:ci": "vitest run && VITE_USE_LOCAL_RELAY=true playwright test --reporter=list",
