E2E: run against local Node relay (no Docker)
- Add in-memory Nostr relay used by Playwright webServer\n- Make E2E dev server use dedicated port (avoid reusing :5173)\n- Default relay seeding to 0; dataset seeding stays opt-in\n- Drop strfry docker relay files and CI docker/dataset steps\n- Fix URL assumptions in Playwright specs and clean lint warnings

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dev": "vite",
     "dev:local": "VITE_USE_LOCAL_RELAY=true vite",
     "dev:test": "VITE_USE_TEST_RELAY=true vite",
-    "dev:relay": "cd dev-relay && docker compose up -d && bash quick-seed.sh 80000",
+    "dev:relay": "pnpm relay:start -- --seed 80000 --port 7777",
+    "relay:start": "tsx dev-relay/node-relay.ts",
     "start": "vite",
     "prebuild": "tsx ./scripts/updateSocialGraph.ts || true",
     "build": "tsc && vite build --mode production",
@@ -28,13 +29,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --fix",
     "preview": "vite preview",
     "pretest": "playwright install --with-deps chromium",
-    "test": "vitest run && VITE_USE_TEST_RELAY=true playwright test --reporter=list",
+    "test": "vitest run && playwright test --reporter=list",
     "test:unit": "vitest run",
-    "test:ci": "vitest run && VITE_USE_LOCAL_RELAY=true playwright test --reporter=list",
-    "test:ci:e2e": "VITE_USE_LOCAL_RELAY=true playwright test --reporter=list,html",
-    "test:local": "vitest run && VITE_USE_LOCAL_RELAY=true playwright test --reporter=list --workers=1",
-    "test:ui": "VITE_USE_TEST_RELAY=true playwright test --ui",
-    "test:ui:local": "VITE_USE_LOCAL_RELAY=true playwright test --ui",
+    "test:ci": "vitest run && playwright test --reporter=list",
+    "test:ci:e2e": "playwright test --reporter=list,html",
+    "test:local": "vitest run && playwright test --reporter=list --workers=1",
+    "test:ui": "playwright test --ui",
+    "test:ui:testrelay": "VITE_USE_TEST_RELAY=true playwright test --ui",
     "test:performance": "VITE_USE_TEST_RELAY=true playwright test tests/performance/ --reporter=list",
     "test:performance:prod": "playwright test tests/performance/ --reporter=list",
     "performance:baseline": "tsx ./scripts/performance-baseline.ts",
@@ -157,7 +158,8 @@
     "workbox-expiration": "^7.4.0",
     "workbox-precaching": "^7.4.0",
     "workbox-routing": "^7.4.0",
-    "workbox-strategies": "^7.4.0"
+    "workbox-strategies": "^7.4.0",
+    "ws": "^8.19.0"
   },
   "resolutions": {
     "@noble/curves": "^1.9.7",
