--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test:local": "vitest run && playwright test --reporter=list --workers=1",
     "test:ui": "playwright test --ui",
     "test:ui:testrelay": "VITE_USE_TEST_RELAY=true playwright test --ui",
+    "tauri:test:dm": "node tests/tauri-driver/dm-smoke.mjs",
     "test:performance": "VITE_USE_TEST_RELAY=true playwright test tests/performance/ --reporter=list",
     "test:performance:prod": "playwright test tests/performance/ --reporter=list",
     "performance:baseline": "tsx ./scripts/performance-baseline.ts",
@@ -146,6 +147,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "rollup-plugin-visualizer": "^6.0.3",
+    "selenium-webdriver": "^4.28.0",
     "tailwindcss": "^3.4.10",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
