--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@tauri-apps/api": "2.8",
     "@tauri-apps/plugin-autostart": "^2.5.1",
     "@tauri-apps/plugin-deep-link": "^2.4.5",
-    "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-dialog": "~2.4.0",
     "@tauri-apps/plugin-opener": "^2.5.0",
     "@types/leaflet": "^1.9.20",
     "blurhash": "^2.0.5",
